# sphinxcontrib-analytics-hub

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/sphinxcontrib_analytics_hub/: __init__.py  __version__.py  analytics.py  const.py
