[project]
name = "sphinxcontrib-analytics-hub"
version = "0.0.1"
description = "Sphinx extension for googleanalytics and baiduanalytics"
authors = [
    {name = "un4gt", email = "mt3085570450@outlook.com"},
]
dependencies = [
    "sphinx>=8.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/"]