[project]
name = "sphinxcontrib-analytics-hub"
version = "0.0.2"
description = "Sphinx extension for googleanalytics and baiduanalytics"
authors = [
    {name = "un4gt", email = "mt3085570450@outlook.com"},
]
dependencies = [
    "sphinx>=7.3.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/un4gt/sphinxcontrib-analytics-hub"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/"]